--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,9 +3,46 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  transition: all 0.2s ease-in-out;
 }
 
 body {
   width: 100%;
   height: 100vh;
+  background-color: #011638;
+}
+
+div#app, main {
+  width: 100%;
+  height: 100%;
+}
+
+label, button {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+input {
+  border: none;
+  border-radius: 8px;
+  height: 40px;
+  padding: 0 8px;
+  font-size: 14px;
+  outline: 2px solid white;
+  
+  &:focus {
+    outline: 2px solid  #9055A2;
+  }
+}
+
+button  {
+  border: none;
+  border-radius: 8px;
+  height: 60px;
+  cursor: pointer;
+  letter-spacing: 2px;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
